--- a/index.html
+++ b/index.html
@@ -5,53 +5,71 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
 	<link rel="stylesheet" href="">
+	<style>
+		.on{color:red;}
+	</style>
 </head>
 <body>
-	<form action="/a.php">
-		<label><span>用户名：</span><input type="text" id="username">*可用大小写英文、数字和下划线，用户名长度6-15！</label><br>
-		<label><span>密码：</span><input type="password" id="password"></label><br>
-		<label><span>确认密码：</span><input type="password" id="repassword"></label><br>
-    	<label><span>Q&nbsp;Q：</span><input type="text" id="qq"></label><br>
-    	<label><span>联系方式：</span><input type="text" id="contact"></label><br>
-    	<label><span>邮箱：</span><input type="text" id="email"></label><br>
-    	<label><input type="submit" id="submit" value="提交"></label>
-	</form>
+	<div class="wrap">
+	    <div class="hd">
+	        <span>1</span>
+	        <span>2</span>
+	        <span>3</span>
+	    </div>
+	    <div class="bd">
+	        <div>a</div>
+	        <div>b</div>
+	        <div>c</div>
+	    </div>
+	</div>
 	<script src="https://cdn.bootcss.com/jquery/1.8.3/jquery.min.js"></script>
 	<script>
-		$(function(){
-			var userNameReg = /^\w{6,15}$/;
-			var passwordReg = /^\w{6,}$/;
-			var qqReg = /^[1-9]\d{4,10}$/;
-			var emailReg = /^([a-zA-Z0-9]+[_|\_|\.]?)*[a-zA-Z0-9]+@([a-zA-Z0-9]+[_|\_|\.]?)*[a-zA-Z0-9]+\.[a-zA-Z]{2,3}$/;
-			var contactReg1 = /^1(3|4|5|7|8)\d{9}$/;//手机
-			var contactReg2 = /^(\(\d{3,4}\)|\d{3,4}-|\s)?\d{7,14}$/;//座机
-			$('#submit').on('click',function(){
-				var userNameIsRight = userNameReg.test($('#username').val());
-				var passwordIsRight = passwordReg.test($('#password').val());
-				var repasswordIsRight = $('#password').val()==$('#repassword').val();
-				var qqIsRight = qqReg.test($('#qq').val());
-				var emailIsRight = emailReg.test($('#email').val());
-				var contactIsRight = contactReg1.test($('#contact').val()) || contactReg2.test($('#contact').val());
-				if(!userNameIsRight){
-					return false;
-				}
-				if(!passwordIsRight){
-					return false;
-				}
-				if(!repasswordIsRight){
-					return false;
-				}
-				if(!qqIsRight){
-					return false;
-				}
-				if(!emailIsRight){
-					return false;
-				}
-				if(!contactIsRight){
-					return false;
-				}
-			});
-		})
+		(function ($) {
+            $.fn.tab = function (opt) {
+                var defaultSettings = {
+                    'active': 'on',
+                    'tit': '.hd',
+                    'con': '.bd',
+                    'event': 'mouseover',
+                    'start': 0
+                };
+                var settings = $.extend({}, defaultSettings, opt);
+                this.each(function () {
+                    var oTit = $(this).children(settings.tit);
+                    var oCon = $(this).children(settings.con);
+                    var timer = null;
+                    //默认显示
+                    oTit.children().eq(settings.start).addClass(settings.active).siblings().removeClass(settings.active);
+                    oCon.children().eq(settings.start).show().siblings().hide();
+                    //绑定事件
+                    oTit.children().bind(settings.event, function () {
+                        var $this = $(this);
+                        if (settings.event == 'mouseover') {//延迟切换
+                            timer = setTimeout(function () {
+                                $this.addClass(settings.active).siblings().removeClass(settings.active);
+                                oCon.children().hide();
+                                oCon.children().eq($this.index()).show();
+                            }, 200);
+                        } else {
+                            $(this).addClass(settings.active).siblings().removeClass(settings.active);
+                            oCon.children().hide();
+                            oCon.children().eq($(this).index()).show();
+                        }
+                    });
+                    if (settings.event == 'mouseover') {
+                        oTit.children().bind('mouseleave', function () {
+                            clearTimeout(timer);
+                        });
+                    }
+                });
+
+            }
+        })(jQuery);
+        $(function(){
+        	$('.wrap').tab({
+        		start:1
+        	});
+        })
 	</script>
 </body>
 </html>
